z-index fix

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -68,9 +68,9 @@ h1.home {
 
 .slide-out-div .footer {
   background-color: black;
-  clear: both;
   position: fixed; bottom: 0; left: 0;
   width: 28.1%;
+  z-index: 200;
 }
 
 /*.move {
